<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d8e5e6"
    android:padding="50dp"
    tools:context=".ServiceProviderActivity">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/carbroke"
        android:id="@+id/imageLogo"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageLogo"
        android:layout_centerInParent="true"
        android:fontFamily="@font/el_messiri_semibold"
        android:text="@string/app_name"
        android:textColor="#000"
        android:textSize="40sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_pro_only"
        android:layout_alignEnd="@id/etxtUsername"
        android:layout_below="@id/appName"
        />
    <EditText
        android:id="@+id/etxtUsername"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/appName"
        android:background="#11000000"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"

        />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:background="#11000000"
        android:layout_below="@id/etxtUsername"
        android:textDirection="rtl"
        android:hint="@string/password"
        android:textAlignment="viewEnd"
        android:imeActionLabel="Sign In"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/etxtPassword"
        android:text="@string/login"
        android:textSize="20sp"/>

</RelativeLayout>