<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="#d8e5e6"
    tools:context=".RegisterActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:src="@drawable/carbroke"
            android:id="@+id/imageLogo"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:scaleType="centerInside"
            android:background="#00FFFFFF"
            />
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLogo"
            android:layout_centerInParent="true"
            android:fontFamily="@font/el_messiri_semibold"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxtName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/appName"
            android:background="#11000000"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textAlignment="textStart"

            />
        <EditText
            android:id="@+id/etxtPhone"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/etxtName"
            android:background="#11000000"
            android:hint="@string/phone"
            android:textAlignment="textEnd"
            android:inputType="phone"
            android:selectAllOnFocus="true"

            />
        <EditText
            android:id="@+id/etxtNewUser"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/etxtPhone"
            android:background="#11000000"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"

            />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:background="#11000000"
            android:layout_below="@id/etxtNewUser"
            android:hint="@string/password"
            android:imeActionLabel="Sign up"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="textEnd"
            />

        <EditText
            android:id="@+id/etxtPasswordCnf"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:background="#11000000"
            android:layout_below="@id/etxtPassword"
            android:textAlignment="textEnd"
            android:hint="@string/password_cnf"
            android:imeActionLabel="Sign Up"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/etxtPasswordCnf"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:enabled="true"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"

            />
</RelativeLayout>
    </ScrollView>

