<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d8e5e6"
        android:scrollbarSize="25dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        tools:context="com.kad.carbrokefinal.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:id="@+id/container2">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/carbroke"
            android:id="@+id/imageLogo"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_name"
            />
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageLogo"
            android:layout_centerInParent="true"
            android:fontFamily="@font/el_messiri_semibold"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etxtUsername"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/appName"
            android:background="#11000000"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"

            />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:background="#11000000"
            android:layout_below="@id/etxtUsername"
            android:textDirection="rtl"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:textAlignment="textEnd"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:text="@string/login"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_below="@id/etxtPassword"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:clickable="true"

            />
        <Button
            android:id="@+id/buttonServicePro"
            android:layout_below="@id/buttonLogin"
            android:text="@string/service_pro"
            android:textStyle="bold"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"

            />

        <TextView
            android:id="@+id/txtViewRegister"
            android:text="@string/new_account"
            android:textAlignment="gravity"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonServicePro"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textIsSelectable="true"
            />

    </RelativeLayout>


</ScrollView>